--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <div class="container">
         <div class="mt-4 text-center" id="contenedor1">
-            <a href="/pages/pagina_principal.html">
+            <a href="./pages/pagina_principal.html">
                 <button class="btn btn-primary boton-gris" id="acceso">Haga click aquí para acceder</button>
             </a>
         </div>
