menú hamburguesa funcionando

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header class="bg-transparent">
         <div class="container">
-            <h1 class="inicio mt-5 text-center">Bienvenido a CE Soluciones Integrales</h1>
+            <h1>Bienvenido a CE Soluciones Integrales</h1>
         </div>
         <div class="botones-laterales">
             <a href="https://www.facebook.com/" class="btn btn-transparent boton-facebook"><img src="./resources/img/facebook.png"></a>
@@ -28,15 +28,20 @@
                 <button class="btn btn-primary boton-gris" id="acceso">Haga click aquí para acceder</button>
             </a>
         </div>
-
-        <audio autoplay loop class="mt-4">
-            <source src="./resources/source/tibetan-singing-bowls-body-damage-repair-heal-body-mind-soul-161797.mp3" type="audio/mpeg">
-            Tu navegador no soporta la reproducción de audio.
-        </audio>
     
         <p id="mensaje" class="mt-4 text-left">¡Gracias por visitarnos!</p>
     </div>
+    <br>
+    <br>
+    <br>
     
+
+
+    <audio controls autoplay loop class="mt-4">
+        <source src="./resources/source/tibetan-singing-bowls-body-damage-repair-heal-body-mind-soul-161797.mp3" type="audio/mpeg">
+        Tu navegador no soporta la reproducción de audio.
+    </audio>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.7.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
