mas correciones del codigo

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header class="bg-transparent">
         <div class="container">
-            <h1>Bienvenido a CE Soluciones Integrales</h1>
+            <h1 class="display-4 text-center">Bienvenido a CE Soluciones Integrales</h1>
         </div>
         <div class="botones-laterales">
             <a href="https://www.facebook.com/" class="btn btn-transparent boton-facebook"><img src="./resources/img/facebook.png"></a>
@@ -21,7 +21,14 @@
             <a href="mailto:ceesolucionesintegrales@gmail.com" class="btn btn-transparent boton-gmail"><img src="./resources/img/gmail.png"></a>
         </div>
     </header>
-
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
     <div class="container">
         <div class="mt-4 text-center" id="contenedor1">
             <a href="./pages/paginaPrincipal.html">
