--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="container">
             <h1 class="display-4 text-center">Bienvenido a CE Soluciones Integrales</h1>
         </div>
-        <div class="botones-laterales">
+        <div class="botones-laterales d-md-flex flex-column">
             <a href="https://www.facebook.com/" class="btn btn-transparent boton-facebook"><img src="./resources/img/facebook.png"></a>
             <a href="https://www.linkedin.com/" class="btn btn-transparent boton-linkedin"><img src="./resources/img/linkedin.png"></a>
             <a href="https://wa.me/541126340879" class="btn btn-transparent boton-whatsapp"><img src="./resources/img/whatsapp.png"></a>
