--- a/pages/paginaPrincipal.html
+++ b/pages/paginaPrincipal.html
@@ -11,7 +11,10 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container">
-                <a class="navbar-brand" href="#">Estudio Jurídico CE <br>Soluciones Integrales</a>
+                <a class="navbar-brand" href="#">
+                    <span class="d-none d-md-inline">Estudio Jurídico CE</span>
+                    <span class="d-md-none">CE Soluciones Integrales</span>
+                </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
